--- a/Mini_Project.ipynb
+++ b/Mini_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Mini Project.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvA68k4gLSvynNgyddxQXq",
+      "authorship_tag": "ABX9TyNL9KMXYicb0NRxlsLwETOZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -966,6 +966,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "aOQm7IyASBtm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8ed7aa47-cb8f-4631-c259-03e4e0528d03"
+      },
+      "source": [
+        "metrics.mean_squared_error(y_test,y_pred)"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.422684076942014"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IIprkGPs2_fG",
         "colab_type": "code",
         "colab": {}
       },
